<resources>
    <string name="app_name">Fitness Journey</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_login">Login</string>
    <string name="navigation_register">Register</string>
    <string name="navigation_find_exercises">Find exercises</string>
    <string name="navigation_progress">In progress exercises</string>
    <string name="navigation_statistics">Statistics</string>
    <string name="options_profile">Profile</string>
    <string name="options_logout">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_username">Username</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_sign_up">Sign up</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email</string>
    <string name="label_new_weight_hint">Introdu greutatea nouă (kg)</string>
    <string name="button_save_weight">Salvează greutatea</string>
    <string name="label_bmi">BMI:</string>
    <string name="label_calories">Calorii recomandate:</string>

</resources>