<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_find_exercices"
        android:icon="@drawable/ic_find"
        android:title="@string/navigation_find_exercises" />

    <item
        android:id="@+id/navigation_in_progress_exercices"
        android:icon="@drawable/ic_progress"
        android:title="@string/navigation_progress" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/ic_bmi"
    android:title="BMI" />
    <item
        android:id="@+id/navigation_diary"
        android:title="Diary"
        android:icon="@drawable/ic_diary" />



</menu>