<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:endIconMode="clear_text"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color"
            app:startIconDrawable="@drawable/ic_home_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_email"
                android:paddingStart="@dimen/icon_position_in_the_left_of_inputText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:endIconMode="clear_text"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_username"
                android:paddingStart="@dimen/icon_position_in_the_left_of_inputText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color"
            app:startIconDrawable="@drawable/baseline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/icon_position_in_the_left_of_inputText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color"
            app:startIconDrawable="@drawable/baseline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/icon_position_in_the_left_of_inputText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prenume" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:helperText="*Required"
            app:helperTextTextColor="@color/helper_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nume" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_sign_up" />
    </LinearLayout>
</ScrollView>
